// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
<div
  className="FieldGroup-iFQzIc dToppz"
>
  
  <input
    error=""
    id=""
    label=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="range"
    value={0}
  />
  
</div>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
<div
  className="FieldGroup-iFQzIc dToppz"
>
  <label
    className="Label-bxMjsr iZhmvb"
    htmlFor="range-with-label"
  >
     
    Text label
     
  </label>
  <input
    error=""
    id="range-with-label"
    label="Text label"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="range"
    value={0}
  />
  
</div>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
<div
  className="FieldGroup-iFQzIc dToppz"
>
  
  <input
    error="Error message"
    id=""
    label=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="range"
    value={0}
  />
  <div
    className="ErrorMessage-eJhZpN bzMSZo"
  >
    Error message
  </div>
</div>
`;
